Revision history for Perl extension App-Egaz

{{$NEXT}}
    - `egaz repeatmasker`
        - Try hard to find rmOutToGFF3.pl

0.1.3 2018-04-22T20:03:24Z
    - `egaz template`
        - Add 0_prep.sh
        - and companion options
    - `egaz repeatmasker`
        - Masked files always with suffix of .fa
        - Find rmOutToGFF3.pl and create .rm.gff

0.1.2 2018-04-16T19:39:57Z
    - Create chr.fasta and chr.fasta.fai in `egaz prepseq`
    - Add `egaz fas2vcf`
    - `egaz template`
        - Fix --taxon
        - Symlink chr.fasta in 3_proc_cmd.sh
        - Add 4_vcf.sh
        - Add 4_circos.sh
        - Add prebuilt karyotype files
        - Add 7_chr_length.sh
    - Add optional dependencies

0.1.1 2018-04-15T18:21:46Z
    - Add `egaz blastmatch`
    - Add `egaz blastlink`
    - `egaz template`
        - Add 1_self_cmd.sh
        - Add 3_proc_cmd.sh

0.1.0 2018-04-14T21:55:22Z
    - Add `egaz template`
        - Add --outdir, --taxon
        - Add 1_pair_cmd.sh
        - Add 2_rawphylo.sh
        - Add 3_multi_cmd.sh
    - Add `egaz repeatmasker`
    - Add --about, --repeatmasker, --min, and --gi to `egaz prepseq`
    - `egaz raxml` supports one or more infiles
    - Requires pigz

0.0.14 2018-04-02T20:22:09Z
    - Add `egaz multiz`
    - Add normalize section to `egaz lastz`
    - Add `share/check_dep.sh`
    - Update README
    - Install multiz to $HOME/bin on CI
    - Add ladder() to Common.pm

0.0.13 2018-04-01T17:32:38Z
    - Add `egaz prepseq`
    - Add `egaz lpcnam`
    - Install lastz, faops and kent-tools to $HOME/bin on CI

0.0.12 2018-03-30T12:11:11Z
    - Add `egaz lastz`
    - Use `abstract()` to replace `use constant abstract =>`

0.0.11 2018-03-28T00:36:36Z
    - Add `egaz plottree`
    - Test installations of R and its packages
    - Add `egaz blastn`

0.0.10 2018-03-26T14:26:50Z
    - Add `egaz raxml`
    - Add exec_cmd() to Common.pm

0.0.9 2018-03-24T22:16:24Z
    - Add `egaz exactmatch`
    - Add run_sparsemem() and get_size() to Common.pm
