@@ -15,7 +15,7 @@ $result = test_app( 'App::Egaz' => [qw(prepseq t/not_exists)] );
 like( $result->error, qr{doesn't exist}, 'infile not exists' );
 
 SKIP: {
-    skip "faops or faToTwoBit or samtools not installed", 11
+    skip "faops or faToTwoBit or samtools not installed", 12
         unless IPC::Cmd::can_run('faops')
         and IPC::Cmd::can_run('faToTwoBit')
         and IPC::Cmd::can_run('samtools');
@@ -32,6 +32,7 @@ SKIP: {
         5, '5 commands executed' );
     like( $result->stderr, qr{outdir}, 'default --outdir' );
     ok( $tempdir->child("pig1.fa")->is_file,       'pig1.fa exists' );
+    ok( $tempdir->child("pig2.fa")->is_file,       'pig2.fa exists' );
     ok( $tempdir->child("chr.sizes")->is_file,     'chr.sizes exists' );
     ok( $tempdir->child("chr.2bit")->is_file,      'chr.2bit exists' );
     ok( $tempdir->child("chr.fasta")->is_file,     'chr.fasta exists' );
@@ -39,10 +40,12 @@ SKIP: {
 
     $tempdir->child("chr.sizes")->remove;
     $tempdir->child("chr.2bit")->remove;
+    $tempdir->child("chr.fasta")->remove;
+    $tempdir->child("chr.fasta.fai")->remove;
 
     $result = test_app( 'App::Egaz' => [ "prepseq", ".", "-v", ] );
     is( ( scalar grep {/^CMD/} grep {/\S/} split( /\n/, $result->stderr ) ),
-        4, '4 commands executed' );
+        6, '6 commands executed' );
     ok( $tempdir->child("chr.sizes")->is_file, 'chr.sizes exists' );
     ok( $tempdir->child("chr.2bit")->is_file,  'chr.2bit exists' );
 
@@ -64,8 +67,7 @@ SKIP: {
     $result = test_app(
         'App::Egaz' => [
             "prepseq", "$t_path/pseudopig.fa", "--about", "1000000",
-            "--min",   "1",                    "-v",      "--repeatmasker",
-            "--gff --parallel 2"
+            "--min", "1", "-v", "--repeatmasker", "--gff --parallel 2"
         ]
     );
     ok( !$tempdir->child("pig1.fa")->is_file,   'pig1.fa not exists' );
