@@ -3,6 +3,8 @@ Revision history for Perl extension App-Egaz
 {{$NEXT}}
     - `egaz repeatmasker`
         - Try hard to find rmOutToGFF3.pl
+    - `egaz prepseq`
+        - Simplify header for sequences in directory
 
 0.1.3 2018-04-22T20:03:24Z
     - `egaz template`
